Translate2 - Org/src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Hiru__c</fullName>
        <formula>IF (
      (
        ( 
          ISPICKVAL(Field4__c, &quot;15:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;14:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;14:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;13:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;13:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;12:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;12:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;11:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;11:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;10:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;10:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;9:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;9:00&quot;) ||
          ISPICKVAL(Field4__c, &quot;8:30&quot;) ||
          ISPICKVAL(Field4__c, &quot;8:00&quot;) 
          )
      ), 1, 0
)</formula>
        <label>○</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JpCookCheckTime__c</fullName>
        <label>和食調理_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JpCookCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>和食調理_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JpCookChecker__c</fullName>
        <label>和食調理_確認者</label>
        <picklist>
            <picklistValues>
                <fullName>Shimura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taniguchi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kingakunebiki__c</fullName>
        <inlineHelpText>マイナス金額を入力してください、たとえば、&quot;-1000&quot;のように</inlineHelpText>
        <label>金額値引</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>会場プラン</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LeadIndexRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>予約インデックス</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>LeadIndexRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadIndexSubId__c</fullName>
        <externalId>true</externalId>
        <label>予約インデックスSUB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerArrive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>幹事来館</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mans__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>ご予約の人数の内訳、男性の人数を入力してください。</inlineHelpText>
        <label>男性</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MealStyle__c</fullName>
        <label>お料理形式</label>
        <picklist>
            <picklistValues>
                <fullName>卓盛り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>コース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会席</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ビュッフェ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting1__c</fullName>
        <description>ケータリング用会議開始時間</description>
        <label>会議開始時間</label>
        <picklist>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting2__c</fullName>
        <description>ケータリング用会議終了時間</description>
        <label>会議終了時間</label>
        <picklist>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Morimongn__c</fullName>
        <formula>IF ( Morningfood__c = TRUE,  IF (  StayPersons__c   &gt;  0 , StayPersons__c- Childs__c  -  Field309__c , 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>朝食数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Morningfood__c</fullName>
        <defaultValue>false</defaultValue>
        <description>朝食をつける場合チェック！</description>
        <inlineHelpText>朝食7:30〜または8:30〜</inlineHelpText>
        <label>朝食</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Morningtime__c</fullName>
        <inlineHelpText>朝食時間を選択</inlineHelpText>
        <label>朝食時間</label>
        <picklist>
            <controllingField>Morningfood__c</controllingField>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nights__c</fullName>
        <formula>IF ( ISPICKVAL(ReservedType__c, &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;) || ( DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c) &amp;&amp; (Femails__c + StayPersons__c + Mans__c) &lt;&gt; 0 ) || ( DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c) &amp;&amp; CONTAINS(Name, &quot;の方&quot;) &amp;&amp; (Femails__c + StayPersons__c + Mans__c) &lt;&gt; 0 ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>宿泊予約の判断は、まず予約タイプ、到着日と出発日かつ予約人数、到着日と出発日かつ予約人数かつ&quot;の方&quot;となる</inlineHelpText>
        <label>Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <displayFormat>J#{YYYY}{MM}{DD}-{0}</displayFormat>
        <externalId>true</externalId>
        <label>予約No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NumOfBus__c</fullName>
        <label>送迎バス_台数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Older__c</fullName>
        <inlineHelpText>年齢層は何歳から何歳くらいまでのお客様でしょう。</inlineHelpText>
        <label>年齢層</label>
        <picklist>
            <picklistValues>
                <fullName>２０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>３０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>４０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>５０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>６０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>７０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>８０代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>９０代</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OrgCreateDate__c</fullName>
        <label>作成日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgCreateUser__c</fullName>
        <label>登録担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgRsvNo__c</fullName>
        <externalId>true</externalId>
        <label>予約№(旧)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgUpdateDate__c</fullName>
        <label>更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrgUpdateUser__c</fullName>
        <label>更新担当者（旧）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OryourimeiX02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理1</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理1)</relationshipLabel>
        <relationshipName>R00N10000000qn0gEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherComment__c</fullName>
        <label>その他_コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Otherdoc__c</fullName>
        <inlineHelpText>予約の別紙の種類には、団体打ち合わせ表、法事打ち合わせ表、部屋割り表、詳細な指示書などあります。
これらの文書をスキャンし、アップロードして『ドキュメント』タブへのリンクを貼ってください。</inlineHelpText>
        <label>予約の別紙参照</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <description>ケータリング専用項目（駐車場）</description>
        <label>駐車場</label>
        <picklist>
            <picklistValues>
                <fullName>有</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party1__c</fullName>
        <description>ケータリング用パーティー開始時間</description>
        <label>パーティー開始時間</label>
        <picklist>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party2__c</fullName>
        <description>ケータリング用パーティー終了時間</description>
        <label>パーティー終了時間</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyFormal__c</fullName>
        <label>宴会形式</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyType__c</fullName>
        <label>宴会種別</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayConfirm__c</fullName>
        <description>ケータリング支払い関係（支払確認）</description>
        <label>支払確認</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PayDirect__c</fullName>
        <description>ケータリング支払い関係（請求指示）</description>
        <label>請求指示</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>支払い_日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaymentWay__c</fullName>
        <label>支払い_方法</label>
        <picklist>
            <picklistValues>
                <fullName>現金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>集金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>振込</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>カード</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_C__c</fullName>
        <label>R/C</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReceptionCheckTime__c</fullName>
        <label>受付_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReceptionCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受付_確認済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceptionChecker__c</fullName>
        <label>受付_確認者</label>
        <picklist>
            <picklistValues>
                <fullName>Ozaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kOno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takemori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sawada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanaka</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receptiondate__c</fullName>
        <formula>DATEVALUE( ReservedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約受付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relcontact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>reservetg85</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renpakuflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renpakuflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReservationDate__c</fullName>
        <formula>DATEVALUE(EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReservationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReservedContact__c</fullName>
        <label>予約受付者</label>
        <picklist>
            <picklistValues>
                <fullName>Ono</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Kino</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Takahashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nishina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aoki</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Katou</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ebata</fullName>
                <color>#663366</color>
            </picklistValues>
            <picklistValues>
                <fullName>Akiyama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kobayashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miyazaki-President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miyazaki-Okami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Igarashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yaegashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugimoto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morimoto</fullName>
                <color>#33FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>----------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--(Yuuki)--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--(Horikoshi)--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--(Kasaba-Manager)--</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>--(Yamanashi)--</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>--(Mineo)--</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>--(Yamauchi)--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReservedDate821__c</fullName>
        <formula>DATEVALUE(EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReservedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReservedDate__c</fullName>
        <description>ご予約の受付日</description>
        <label>予約受付日</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReservedStatus__c</fullName>
        <label>予約ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>確認中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>確定</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>会場おさえ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仮予約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>キャンセルまち</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO SHOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>キャンセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>削除</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReservedType__c</fullName>
        <inlineHelpText>ご予約のときのタイプを指定してください。</inlineHelpText>
        <label>予約タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>昼 賑</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>夕 賑</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>昼 部屋</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>夕 部屋</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>泊 素</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>泊 朝半</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>泊 昼半</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泊 夕半</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>泊 ２食</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>泊 ２食 朝昼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泊 ２食 昼夕</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泊 ３食</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>団体 夕</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>団体 昼</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>婚礼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>昼 特企</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>お弁当 取りに参ります！</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>お弁当 持って行きます！</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宴会</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ケータリング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会議</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>法事</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RoomGroupNo__c</fullName>
        <description>１部屋の予約データ識別用</description>
        <label>部屋グループ番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rroom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>本予約にお部屋を一つ割当てください。
お部屋を2つ以上割り当てる場合は、同一お客様名の新規予約を作成してください。</inlineHelpText>
        <label>部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>R00N10000000rzUoEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOfficeInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>旅行会社情報</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ご予約 (旅行会社情報)</relationshipLabel>
        <relationshipName>SalesOfficeInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesaccount__c</fullName>
        <formula>IF ( BridalDantaikei__c = 0,  Field283__c , BridalDantaikei__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>婚礼または団体の見積合計金額が¥0なら、見積合計$を、そうでなければ、見積合計(税込)</inlineHelpText>
        <label>$Salesaccount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SearchDate__c</fullName>
        <label>SearchDate</label>
        <type>Date</type>
    </fields>
</CustomObject>